[package]
name = "deso"
description = "DeSo (BitClout) Transaction Signing, and Other Helpful Utilities" 
version = "0.1.0"
edition = "2021"
license-file = "./license"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
base58 = "0.2.0"
hdwallet = "0.3.1"
hex = "0.3.1"
isahc = {version = "1.7.0", features = ["json", "text-decoding"]}
secp256k1 = "0.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha2 = {version = "0.10.2"}
tiny-bip39 = "0.8.0" # bip39




